@@ -1,5 +1,6 @@
 Changelog for mk-slave-delay:
 
+   * A MASTER-HOST without binary logging enabled caused a crash (issue 215).
    * Connection options were not read from the [client] section (issue 249).
    * Set connection options immediately after connecting (issue 286).
 
